# mundane-backend

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  docs.yaml  image-build-push.yaml
docs/: api.rst  changelog.rst  conf.py  index.rst
examples/: core.json  demo.py
game-docs/: CARDS.md  SPEC.md
src/mundane/: __init__.py  mundane_engine.py
src/mundane/api/: __init__.py  app.py  schemas.py  set_loader.py
src/mundane/api/card_schema/: __init__.py  card-set.schema.json
src/mundane/engine/: __init__.py  actions.py  cards.py  demo.py  game.py  rules.py  serialize.py  state.py
tests/: test_api.py  test_replay.py  test_rules.py
