[project]
name = "mundane"
version = "0.1.0"
description = "Magic: The Gathering without the, you know, magic"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    # Litestar 3 is still in development; track main, pinned to a commit SHA in uv.lock.
    # See the 3.x changelog: https://docs.litestar.dev/3-dev/release-notes/changelog.html
    "litestar @ git+https://github.com/litestar-org/litestar.git@main",
    # Pure-Python ASGI server so `uvicorn mundane.api.app:app` runs out of the box.
    "uvicorn>=0.30",
]

[project.urls]
repository = "https://github.com/letsbuilda/mundane/"
documentation = "https://docs.letsbuilda.dev/mundane/"

[build-system]
requires = ["uv_build>=0.11.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # DX
    "nox>=2026.4.10",
    "prek>=0.4.0",
    # Linters
    "ruff>=0.15.13",
    "mypy>=2.0.0",
    "ty>=0.0.37",
]
docs = [
    "sphinx>=7.4.4",
    "furo>=2024.5.6",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]
tests = [
     "coverage>=7.14.0",
    "pytest>=9.0.2",
    # Extensions
    "pytest-randomly>=4.0.1",
    # Reporting
    "allure-pytest>=2.15.3",
    # Litestar's TestClient is built on httpx
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - See LICENSE file
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"src/mundane/engine/demo.py" = [
    "T201",   # (`print` found) - The demo is a CLI; printing the scenario outcome is the point
]
"tests/*" = [
    "S101",     # (Use of `assert` detected) - Yes, that's the point
    "PLR2004",  # (Magic value used in comparison) - Asserting against literal expected values is the point
]

[tool.ruff.lint.isort]
known-first-party = ["mundane"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true
num_workers = 4
native_parser = true # required by num_workers
plugins = ["pydantic.mypy"]

[tool.coverage.run]
branch = true
source_pkgs = ["mundane"]
source_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
