[project]
name = "mundane"
version = "0.1.0"
description = "No dragons. No spells. Just Tuesday."
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # Litestar 3 is still in development; track main, pinned to a commit SHA in uv.lock.
    # See the 3.x changelog: https://docs.litestar.dev/3-dev/release-notes/changelog.html
    "litestar @ git+https://github.com/litestar-org/litestar.git@main",
    "uvicorn>=0.49.0",
    # Fetching external card sets and validating them against the vendored schema (api/set_loader.py).
    "httpx>=0.28.1",
    "jsonschema>=4.26",
]

[project.urls]
repository = "https://github.com/letsbuilda/mundane-backend"
documentation = "https://docs.letsbuilda.dev/mundane/"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # DX
    "nox>=2026.4.10",
    "prek>=0.4.5",
    # Linters
    "ruff>=0.15.19",
    "mypy>=2.0.0",
    "ty>=0.0.52",
    # Type stubs (jsonschema ships no py.typed)
    "types-jsonschema>=4.26",
]
docs = [
    "sphinx>=7.4.4",
    "furo>=2024.5.6",
    "sphinx-autoapi>=3.8.0",
    "releases>=2.1.1",
]
tests = [
     "coverage>=7.14.3",
    "pytest>=9.1.1",
    # Extensions
    "pytest-randomly>=4.0.1",
    # Reporting
    "allure-pytest>=2.15.3",
]

[tool.uv]
# Sync with Dependabot's uv version
required-version = ">=0.11.8"
exclude-newer = "P7D"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - See LICENSE file
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/conf.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"examples/*" = [
    "INP001", # (File is part of an implicit namespace package. Add an `__init__.py`.) - Examples are not modules
    "T201",   # (`print` found) - The demo is a CLI; printing the scenario outcome is the point
]
"tests/*" = [
    "S101",     # (Use of `assert` detected) - Yes, that's the point
    "PLR2004",  # (Magic value used in comparison) - Asserting against literal expected values is the point
]

[tool.ruff.lint.isort]
known-first-party = ["mundane"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
pretty = true
mypy_path = "examples"
num_workers = 4
native_parser = true # required by num_workers
plugins = ["pydantic.mypy"]

[tool.ty.environment]
extra-paths = ["examples"]  # so the demo smoke test can `from demo import demo`

[tool.coverage.run]
branch = true
source_pkgs = ["mundane"]
source_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["examples"]
